kubernetes/apps/automation/n8n/app/referencegrant.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: n8n-public-webhooks
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: networking-public
  to:
    - group: ""
      kind: Service
      name: n8n
